--- a/lib/discount_consumer_web/live/product_live/index.html.leex
+++ b/lib/discount_consumer_web/live/product_live/index.html.leex
@@ -9,31 +9,30 @@
     return_to: Routes.product_index_path(@socket, :index) %>
 <% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Discount</th>
-      <th>Price</th>
+<ul id="products">
+  <%= for product <- @products do %>
+    <li>
+      <h3>
+        <div >
+          Nome: <%=  product.name %>
+        </div>
+        <div >
+          Discount: <%=  product.discount %>
+        </div>
+      </h3>
+      <div class="details">
+        <div>
+          <strong><%= product.price %></strong>
+        </div>
 
-      <th></th>
-    </tr>
-  </thead>
-  <tbody id="products">
-    <%= for product <- @products do %>
-      <tr id="product-<%= product.id %>">
-        <td><%= product.name %></td>
-        <td><%= product.discount %></td>
-        <td><%= product.price %></td>
-
-        <td>
-          <span><%= live_redirect "Show", to: Routes.product_show_path(@socket, :show, product) %></span>
-          <span><%= live_patch "Edit", to: Routes.product_index_path(@socket, :edit, product) %></span>
-          <span><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: product.id, data: [confirm: "Are you sure?"] %></span>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+          <div>
+            <span><%= live_redirect "Show", to: Routes.product_show_path(@socket, :show, product) %></span>
+            <span><%= live_patch "Edit", to: Routes.product_index_path(@socket, :edit, product) %></span>
+            <span><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: product.id, data: [confirm: "Are you sure?"] %></span>
+          </div>
+      </div>
+    </li>
+  <% end %>
+</ul>
 
 <span><%= live_patch "New Product", to: Routes.product_index_path(@socket, :new) %></span>
