--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -8,7 +8,7 @@ body{
   height: 100vh;
   width: 100vw;
   grid-template-columns: 1fr 5fr 1fr;
-  grid-template-rows: 20vh 70vh 10vh;
+  grid-template-rows: 20vh 1fr 10vh;
   grid-template-areas: "h      h      h"
                        ".      m      ."
                        "f      f      f";
