--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -1,6 +1,6 @@
-body{
+body {
   margin: 0;
-  background-color: #959aa1;
+  background-color: #fff;
 }
 
 .container {
@@ -8,61 +8,109 @@ body{
   height: 100vh;
   width: 100vw;
   grid-template-columns: 1fr 5fr 1fr;
-  grid-template-rows: 20vh 1fr 10vh;
+  // grid-template-rows: 5vh 1fr 10vh;
+  // grid-template-areas: "h      h      h"
+  //   ".      m      ."
+  //   "f      f      f";
+  grid-template-rows: 5vh 1fr;
   grid-template-areas: "h      h      h"
-                       ".      m      ."
-                       "f      f      f";
-  
-  header{
+    "m      m      m";
+
+  header {
     grid-area: h;
-    background-color: #17365e;
+    background-color: rgb(36, 14, 61);
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+
+    p {
+      color: rgb(243, 86, 21);
+      font-size: 18px;
+      font-weight: bold;
+    }
   }
+
   main {
     grid-area: m;
-    background-color: #f0f0f0;
+    width: 80%;
+    justify-self: center;
+
+    .info {
+      display: flex;
+      justify-content: space-between;
+
+      span {
+        align-self: center;
+
+        a {
+          color: #fff;
+          text-decoration: none;
+          background-color: rgb(243, 86, 21);
+          border-radius: 8px;
+          padding: 10px;
+          transition: background-color 0.5s;
+
+          &:hover {
+            background-color: rgb(36, 14, 61);
+          }
+        }
+      }
+    }
+
+    h1 {
+      color: rgb(36, 14, 61);
+    }
   }
-  footer{
-    grid-area: f;
-    background-color: #ff8083;
-  }
+
+  // footer{
+  //   grid-area: f;
+  //   background-color: #ff8083;
+  // }
 }
 
-ul#products{
+ul#products {
+  display: flex;
+  flex-direction: column;
+  padding-left: 0px;
+
   li {
     list-style: none;
-    background-color: #fff;
+    border: 1px solid rgb(243, 86, 21);
     transition: transform 0.2s;
-    padding: 15px;
-    border-radius: 5px;
+    padding: 10px;
+    border-radius: 16px;
     margin: 10px;
 
-    &:hover{
+    &:hover {
       transform: translateX(10px);
     }
 
     h3 {
+      margin-top: 3px;
       display: flex;
       justify-content: space-between;
     }
 
-    .details{
+    .details {
       display: flex;
       justify-content: space-between;
-      span{
-        background-color: #f0f0f0;
-        border-radius: 5px;
-        border: 1px solid black;
 
-        a{
-          &:hover{
-            background-color: #bfb6b6; 
-          }
-          padding: 2px;
+      span {
+        // background-color: #f0f0f0;
+        // border-radius: 5px;
+        // border: 1px solid black;
+
+        a {
+          color: #fff;
           text-decoration: none;
-          color: black;
+          border-radius: 8px;
+          padding: 5px;
+          background-color: rgb(36, 14, 61);
+          transition: background-color 0.5s;
         }
       }
     }
 
   }
 }
+
