--- a/lib/discount_consumer_web/live/product_live/index.html.leex
+++ b/lib/discount_consumer_web/live/product_live/index.html.leex
@@ -1,7 +1,10 @@
-<h1>Listing Products</h1>
+<div class="info">
+    <h1>Listing Products</h1>
+    <span><%= live_patch "New Product", to: Routes.product_index_path(@socket, :new) %></span>
+</div>
 
 <%= if @live_action in [:new, :edit] do %>
-  <%= live_modal @socket, DiscountConsumerWeb.ProductLive.FormComponent,
+<%= live_modal @socket, DiscountConsumerWeb.ProductLive.FormComponent,
     id: @product.id || :new,
     title: @page_title,
     action: @live_action,
@@ -11,28 +14,26 @@
 
 <ul id="products">
   <%= for product <- @products do %>
-    <li>
-      <h3>
-        <div >
-          Nome: <%=  product.name %>
-        </div>
-        <div >
-          Discount: <%=  product.discount %>
-        </div>
-      </h3>
-      <div class="details">
-        <div>
-          <strong><%= product.price %></strong>
-        </div>
-
-          <div>
-            <span><%= live_redirect "Show", to: Routes.product_show_path(@socket, :show, product) %></span>
-            <span><%= live_patch "Edit", to: Routes.product_index_path(@socket, :edit, product) %></span>
-            <span><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: product.id, data: [confirm: "Are you sure?"] %></span>
-          </div>
+  <li>
+    <h3>
+      <div>
+        Nome: <%=  product.name %>
       </div>
-    </li>
+      <div>
+        Discount: <%=  product.discount %>
+      </div>
+    </h3>
+    <div class="details">
+      <div>
+        <strong><%= product.price %></strong>
+      </div>
+
+      <div>
+        <span><%= live_redirect "Show", to: Routes.product_show_path(@socket, :show, product) %></span>
+        <span><%= live_patch "Edit", to: Routes.product_index_path(@socket, :edit, product) %></span>
+        <span><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: product.id, data: [confirm: "Are you sure?"] %></span>
+      </div>
+    </div>
+  </li>
   <% end %>
 </ul>
-
-<span><%= live_patch "New Product", to: Routes.product_index_path(@socket, :new) %></span>
