--- a/lib/discount_consumer_web/templates/layout/root.html.leex
+++ b/lib/discount_consumer_web/templates/layout/root.html.leex
@@ -10,7 +10,9 @@
     <script defer phx-track-static type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
   <body class="container">
-    <header></header>
+    <header>
+      <p>ElxPro</p>
+    </header>
     <main>
       <%= @inner_content %>
     </main>
